--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "deploy": "gh-pages -d dist",
-    "deploy2": "push-dir --dir=dist --branch=master"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
-    "nuxt": "^3.13.0",
-    "push-dir": "^0.4.1"
+    "nuxt": "^3.13.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.3"
